[package]
name = "uciephy"
version = "0.0.0"
edition = "2021"
authors = ["Rahul Kumar <rahulkumar@berkeley.edu>", "Rohan Kumar <rohankumar@berkeley.edu>"]
description = "An open-source UCIe implementation developed at UC Berkeley"
repository = "https://github.com/ucb-ucie/ucie"
license = "BSD-3-Clause"

[dependencies]
substrate = { version = "0.3.0", registry = "substrate" }
spectre = { version = "0.3.0", registry = "substrate" }

serde = { version = "1", features = ["derive"] }
rust_decimal = "1.30"
rust_decimal_macros = "1.30"
