[package]
name = "uciephy"
version = "0.0.0"
edition = "2021"
authors = ["Rahul Kumar <rahulkumar@berkeley.edu>", "Rohan Kumar <rohankumar@berkeley.edu>"]
description = "An open-source UCIe implementation developed at UC Berkeley"
repository = "https://github.com/ucb-ucie/ucie"
license = "BSD-3-Clause"

[dependencies]
substrate = { git = "https://github.com/substrate-labs/substrate2" }
spectre = { git = "https://github.com/substrate-labs/substrate2" }
sky130pdk = { git = "https://github.com/substrate-labs/substrate2" }
cache = { git = "https://github.com/substrate-labs/substrate2" }

serde = { version = "1", features = ["derive"] }
itertools = "0.11"
rust_decimal = "1.30"
rust_decimal_macros = "1.30"
